Fixed the below issues pointed out by Marilyn, as part of DHFPROD-3023. 1. Hovering over the error icon in expression box should NOT change the cursor, since there is nothing to show or link to. 2. The row content should be top-aligned vertically in the entity table.
Also, removed some unnecessary code.

--- a/web/src/main/ui/app/components/flows-new/edit-flow/mapping/ui/entity-table-ui.component.scss
+++ b/web/src/main/ui/app/components/flows-new/edit-flow/mapping/ui/entity-table-ui.component.scss
@@ -31,6 +31,7 @@
 		border-right: 1px solid rgba(0, 0, 0, 0.12);
 		padding-left: 1%;
 		align-self: stretch;
+		align-items: flex-start;
 		font-size: 13px !important;
 	}
 
@@ -124,6 +125,8 @@
 		color: red; 
 		padding:0px; 
 		margin-top: -5px;
+		user-select: none;
+    cursor: default;
 }
 #error-description{
 		font-size: 10px;
